added correction of mime-type in id3v2 image frame

--- a/Source/Krach/Krach.csproj
+++ b/Source/Krach/Krach.csproj
@@ -201,5 +201,6 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq" />
+    <Reference Include="System.Drawing" />
   </ItemGroup>
 </Project>
