--- a/Source/Wrappers.Casadi/Wrappers.Casadi.csproj
+++ b/Source/Wrappers.Casadi/Wrappers.Casadi.csproj
@@ -21,7 +21,7 @@
     <ConsolePause>false</ConsolePause>
     <CustomCommands>
       <CustomCommands>
-        <Command type="BeforeBuild" command="${SolutionDir}/Wrappers.Casadi.Native/install &quot;${ProjectDir}&quot;" workingdir="${SolutionDir}/Wrappers.Casadi.Native" />
+        <Command type="BeforeBuild" command="${ProjectDir}/../Wrappers.Casadi.Native/install &quot;${ProjectDir}&quot;" workingdir="${ProjectDir}/../Wrappers.Casadi.Native" />
       </CustomCommands>
     </CustomCommands>
   </PropertyGroup>
@@ -34,7 +34,7 @@
     <ConsolePause>false</ConsolePause>
     <CustomCommands>
       <CustomCommands>
-        <Command type="BeforeBuild" command="${SolutionDir}/Wrappers.Casadi.Native/install &quot;${ProjectDir}&quot;" workingdir="${SolutionDir}/Wrappers.Casadi.Native" />
+        <Command type="BeforeBuild" command="${ProjectDir}/../Wrappers.Casadi.Native/install &quot;${ProjectDir}&quot;" workingdir="${ProjectDir}/../Wrappers.Casadi.Native" />
       </CustomCommands>
     </CustomCommands>
   </PropertyGroup>
