improved hsv interpolation

--- a/Source/Krach/Krach.csproj
+++ b/Source/Krach/Krach.csproj
@@ -192,6 +192,7 @@
     <Compile Include="Calculus\Rules\Vectors\VectorSelect.cs" />
     <Compile Include="Extensions\OrderedRanges.cs" />
     <Compile Include="Calculus\Derivation.cs" />
+    <Compile Include="Basics\Direction.cs" />
     <Compile Include="Maps\Basic\SineMap.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
