--- a/Source/Krach/Krach.csproj
+++ b/Source/Krach/Krach.csproj
@@ -77,7 +77,6 @@
     <Compile Include="Extensions\Streams.cs" />
     <Compile Include="Extensions\Strings.cs" />
     <Compile Include="Extensions\Terminal.cs" />
-    <Compile Include="Formats\Mpeg\MpegAudioXingFrame.cs" />
     <Compile Include="Formats\Mpeg\MpegAudioDataFrame.cs" />
     <Compile Include="Formats\Mpeg\MpegAudioSpecification.cs" />
     <Compile Include="Formats\Mpeg\MpegAudioFrame.cs" />
@@ -192,6 +191,12 @@
     <Compile Include="Calculus\Rules\Vectors\VectorSelect.cs" />
     <Compile Include="Extensions\OrderedRanges.cs" />
     <Compile Include="Calculus\Derivation.cs" />
+    <Compile Include="Formats\Mpeg\MetaData\MpegAudioFraunhoferFrame.cs" />
+    <Compile Include="Formats\Mpeg\MetaData\MpegAudioLameFrame.cs" />
+    <Compile Include="Formats\Mpeg\MetaData\MpegAudioXingFrame.cs" />
+    <Compile Include="Formats\Mpeg\MetaData\MpegAudioSimpleMetaDataFrame.cs" />
+    <Compile Include="Formats\Mpeg\MetaData\MpegAudioMetaDataFrame.cs" />
+    <Compile Include="Formats\Mpeg\MetaData\MpegAudioInfoFrame.cs" />
     <Compile Include="Basics\Direction.cs" />
     <Compile Include="Maps\Basic\SineMap.cs" />
   </ItemGroup>
@@ -202,5 +207,8 @@
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Drawing" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Formats\Mpeg\MetaData\" />
   </ItemGroup>
 </Project>
