add dotnet project file

--- a/Krach/Krach.csproj
+++ b/Krach/Krach.csproj
@@ -1,217 +1,5 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{132A3E13-29BF-4322-B17F-E5E5D86C22EF}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Krach</RootNamespace>
-    <AssemblyName>Krach</AssemblyName>
-    <ProductVersion>10.0.0</ProductVersion>
+    <TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug</OutputPath>
-    <DefineConstants>DEBUG;</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release</OutputPath>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <ItemGroup>
-    <Compile Include="Audio\PcmAudio.cs" />
-    <Compile Include="Basics\Complex.cs" />
-    <Compile Include="Basics\ProbabilityEntries.cs" />
-    <Compile Include="Basics\MatrixComplex.cs" />
-    <Compile Include="Basics\ProbabilityEntry.cs" />
-    <Compile Include="Basics\Vector1Integer.cs" />
-    <Compile Include="Basics\Vector2Integer.cs" />
-    <Compile Include="Basics\Matrix.cs" />
-    <Compile Include="Basics\Range.cs" />
-    <Compile Include="Basics\Vector1Double.cs" />
-    <Compile Include="Basics\Vector2Double.cs" />
-    <Compile Include="BitField.cs" />
-    <Compile Include="Calculus\Rules\Composite\All.cs" />
-    <Compile Include="Calculus\Rules\Composite\Maybe.cs" />
-    <Compile Include="Calculus\Rules\Composite\Everywhere.cs" />
-    <Compile Include="Calculus\Rules\Tests.cs" />
-    <Compile Include="Calculus\Rules\Definitions\ExpandAppliedFunctionDefinition.cs" />
-    <Compile Include="Calculus\Rules\Simplification\BigSum.cs" />
-    <Compile Include="Calculus\Rules\Simplification\BigProduct.cs" />
-    <Compile Include="Calculus\Rules\Simplification\Norm.cs" />
-    <Compile Include="Calculus\Rules\Simplification\VectorScaling.cs" />
-    <Compile Include="Calculus\Rules\Simplification\DotProduct.cs" />
-    <Compile Include="Calculus\Rules\Simplification\VectorSum.cs" />
-    <Compile Include="Calculus\Rules\Simplification\Identity.cs" />
-    <Compile Include="Calculus\Terms\Notation\Custom\BasicBinaryOperatorSyntax.cs" />
-    <Compile Include="Collections\BatchCollection.cs" />
-    <Compile Include="Collections\SearchList.cs" />
-    <Compile Include="Combinatorics\BacktrackingSolver.cs" />
-    <Compile Include="Combinatorics\CombinatoricsProblemState.cs" />
-    <Compile Include="Combinatorics\ICombinatoricsProblem.cs" />
-    <Compile Include="Extensions\Actions.cs" />
-    <Compile Include="IAction.cs" />
-    <Compile Include="Design\InstantEqualityComparer.cs" />
-    <Compile Include="Design\Factory.cs" />
-    <Compile Include="Design\IFactory.cs" />
-    <Compile Include="Basics\Delegates.cs" />
-    <Compile Include="Extensions\Binary.cs" />
-    <Compile Include="Extensions\Collections.cs" />
-    <Compile Include="Extensions\Comparables.cs" />
-    <Compile Include="Extensions\Enumerations.cs" />
-    <Compile Include="Extensions\Dictionaries.cs" />
-    <Compile Include="Extensions\Enumerables.cs" />
-    <Compile Include="Extensions\Items.cs" />
-    <Compile Include="Extensions\Maps.cs" />
-    <Compile Include="Extensions\Queues.cs" />
-    <Compile Include="Extensions\Scalars.cs" />
-    <Compile Include="Extensions\Streams.cs" />
-    <Compile Include="Extensions\Strings.cs" />
-    <Compile Include="Extensions\Terminal.cs" />
-    <Compile Include="Formats\Mpeg\MpegAudioDataFrame.cs" />
-    <Compile Include="Formats\Mpeg\MpegAudioSpecification.cs" />
-    <Compile Include="Formats\Mpeg\MpegAudioFrame.cs" />
-    <Compile Include="Formats\Riff\RiffDataChunk.cs" />
-    <Compile Include="Formats\Riff\RiffFormatChunk.cs" />
-    <Compile Include="Formats\Riff\RiffChunk.cs" />
-    <Compile Include="Formats\Riff\RiffWaveChunk.cs" />
-    <Compile Include="Formats\Tags\ID3v1\ID3v1Tag.cs" />
-    <Compile Include="Formats\Tags\ID3v2\ID3v2TextFrame.cs" />
-    <Compile Include="Formats\Tags\ID3v2\ID3v2ImageFrame.cs" />
-    <Compile Include="Formats\Tags\ID3v2\ID3v2UserTextFrame.cs" />
-    <Compile Include="Formats\Tags\ID3v2\ID3v2Frame.cs" />
-    <Compile Include="Formats\Tags\ID3v2\ID3v2GenericFrame.cs" />
-    <Compile Include="Formats\Tags\ID3v2\ID3v2Tag.cs" />
-    <Compile Include="Formats\Tags\ID3v2\ID3v2EncodedFrame.cs" />
-    <Compile Include="SignalProcessing\Wave.cs" />
-    <Compile Include="SignalProcessing\DiscreteFourierTransform.cs" />
-    <Compile Include="SignalProcessing\SpectralAnalysis.cs" />
-    <Compile Include="Graphics\Color.cs" />
-    <Compile Include="Graphics\ColorGenerator.cs" />
-    <Compile Include="Graphics\Colors.cs" />
-    <Compile Include="Graphics\HsvColor.cs" />
-    <Compile Include="Graphics\RgbColor.cs" />
-    <Compile Include="Graphs\GraphTraverser.cs" />
-    <Compile Include="Graphs\IGraph.cs" />
-    <Compile Include="Maps\Abstract\IBounded.cs" />
-    <Compile Include="Maps\Basic\LinearMap.cs" />
-    <Compile Include="Maps\Mappers.cs" />
-    <Compile Include="Maps\InstantMap.cs" />
-    <Compile Include="Maps\Scalars\RangeMap.cs" />
-    <Compile Include="Maps\SymmetricMap.cs" />
-    <Compile Include="Maps\Abstract\ISymmetricMap.cs" />
-    <Compile Include="Maps\Abstract\IMap.cs" />
-    <Compile Include="Maps\Scalars\SymmetricRangeMap.cs" />
-    <Compile Include="Maps\Scalars\DoubleMap.cs" />
-    <Compile Include="Maps\Vectors\Vector1DoubleMap.cs" />
-    <Compile Include="Maps\Vectors\Vector2DoubleMap.cs" />
-    <Compile Include="RandomNumberGenerator.cs" />
-    <Compile Include="Threading\Breaker.cs" />
-    <Compile Include="Collections\Bijection.cs" />
-    <Compile Include="Collections\DictionaryMap.cs" />
-    <Compile Include="Basics\Orthotope1Double.cs" />
-    <Compile Include="Basics\Orthotope1Integer.cs" />
-    <Compile Include="Basics\Orthotope2Double.cs" />
-    <Compile Include="Basics\Orthotope2Integer.cs" />
-    <Compile Include="Maps\Vectors\SymmetricOrthotope2DoubleMap.cs" />
-    <Compile Include="Maps\Vectors\SymmetricOrthotope1DoubleMap.cs" />
-    <Compile Include="Maps\Vectors\Orthotope1DoubleMap.cs" />
-    <Compile Include="Maps\Vectors\Orthotope2DoubleMap.cs" />
-    <Compile Include="Formats\Mpeg\MpegAudioFrameType.cs" />
-    <Compile Include="Design\Option.cs" />
-    <Compile Include="Formats\IParseItem.cs" />
-    <Compile Include="Formats\Mpeg\MpegAudioFile.cs" />
-    <Compile Include="Extensions\Paths.cs" />
-    <Compile Include="Basics\OrderedRange.cs" />
-    <Compile Include="Extensions\Marshaling.cs" />
-    <Compile Include="Calculus\Terms\FunctionTerm.cs" />
-    <Compile Include="Calculus\Terms\ValueTerm.cs" />
-    <Compile Include="Calculus\Terms\VariableTerm.cs" />
-    <Compile Include="Calculus\Terms\BaseTerm.cs" />
-    <Compile Include="Calculus\Terms\Basic\BasicFunctionTerm.cs" />
-    <Compile Include="Calculus\Terms\Basic\BasicValueTerm.cs" />
-    <Compile Include="Calculus\Terms\Composite\Abstraction.cs" />
-    <Compile Include="Calculus\Terms\Composite\Application.cs" />
-    <Compile Include="Calculus\Terms\Composite\Variable.cs" />
-    <Compile Include="Calculus\Terms\Composite\Vector.cs" />
-    <Compile Include="Calculus\Terms\Composite\Selection.cs" />
-    <Compile Include="Calculus\Terms\Basic\Atoms\Constant.cs" />
-    <Compile Include="Calculus\Terms\Basic\Atoms\Exponentiation.cs" />
-    <Compile Include="Calculus\Terms\Basic\Atoms\Logarithm.cs" />
-    <Compile Include="Calculus\Terms\Basic\Atoms\Sum.cs" />
-    <Compile Include="Calculus\Terms\Basic\Atoms\Product.cs" />
-    <Compile Include="Calculus\Rules\Rule.cs" />
-    <Compile Include="Calculus\Rules\Definitions\ExpandFunctionDefinition.cs" />
-    <Compile Include="Calculus\Rules\Definitions\ExpandValueDefinition.cs" />
-    <Compile Include="Calculus\Term.cs" />
-    <Compile Include="Calculus\Rewriting.cs" />
-    <Compile Include="Calculus\Rules\Composite\Any.cs" />
-    <Compile Include="Calculus\Rules\Composite\Anywhere.cs" />
-    <Compile Include="Calculus\Rules\Composite\Repeat.cs" />
-    <Compile Include="Calculus\Rules\FirstOrder\Assignment.cs" />
-    <Compile Include="Calculus\Rules\FirstOrder\FirstOrderRule.cs" />
-    <Compile Include="Calculus\Rules\FirstOrder\Substitution.cs" />
-    <Compile Include="Calculus\Rules\LambdaCalculus\BetaReduction.cs" />
-    <Compile Include="Calculus\Rules\LambdaCalculus\EtaContraction.cs" />
-    <Compile Include="Calculus\Rules\Vectors\SelectVector.cs" />
-    <Compile Include="Calculus\Rules\Vectors\SingletonVector.cs" />
-    <Compile Include="Calculus\Rules\Vectors\FlattenVector.cs" />
-    <Compile Include="Calculus\Rules\Vectors\SelectSingle.cs" />
-    <Compile Include="Calculus\Rules\Simplification\Evaluation.cs" />
-    <Compile Include="Calculus\Rules\Simplification\Sorting.cs" />
-    <Compile Include="Calculus\Terms\Notation\Syntax.cs" />
-    <Compile Include="Calculus\Terms\Notation\Default\AbstractionSyntax.cs" />
-    <Compile Include="Calculus\Terms\Notation\Default\VariableSyntax.cs" />
-    <Compile Include="Calculus\Terms\Notation\Default\ApplicationSyntax.cs" />
-    <Compile Include="Calculus\Terms\Notation\Default\VectorSyntax.cs" />
-    <Compile Include="Calculus\Terms\Notation\Default\SelectionSyntax.cs" />
-    <Compile Include="Calculus\Terms\Notation\Custom\BinaryOperatorSyntax.cs" />
-    <Compile Include="Calculus\Terms\Notation\Custom\ExponentiationSyntax.cs" />
-    <Compile Include="Calculus\Terms\Notation\Custom\NormSyntax.cs" />
-    <Compile Include="Calculus\Abstract\IFunction.cs" />
-    <Compile Include="Calculus\Abstract\IValue.cs" />
-    <Compile Include="Calculus\Explicit\ExplicitFunction.cs" />
-    <Compile Include="Calculus\Explicit\ExplicitValue.cs" />
-    <Compile Include="Calculus\Terms\Basic\Definitions\FunctionDefinition.cs" />
-    <Compile Include="Calculus\Terms\Basic\Definitions\ValueDefinition.cs" />
-    <Compile Include="Calculus\Terms\Notation\Custom\BasicSyntax.cs" />
-    <Compile Include="Calculus\Explicit\ExplicitConstraint.cs" />
-    <Compile Include="Calculus\Abstract\IConstraint.cs" />
-    <Compile Include="Calculus\Constraint.cs" />
-    <Compile Include="Calculus\Rules\Composite\Shortening.cs" />
-    <Compile Include="Calculus\Rules\Vectors\VectorSelect.cs" />
-    <Compile Include="Extensions\OrderedRanges.cs" />
-    <Compile Include="Calculus\Derivation.cs" />
-    <Compile Include="Formats\Mpeg\MetaData\MpegAudioFraunhoferFrame.cs" />
-    <Compile Include="Formats\Mpeg\MetaData\MpegAudioLameFrame.cs" />
-    <Compile Include="Formats\Mpeg\MetaData\MpegAudioXingFrame.cs" />
-    <Compile Include="Formats\Mpeg\MetaData\MpegAudioSimpleMetaDataFrame.cs" />
-    <Compile Include="Formats\Mpeg\MetaData\MpegAudioMetaDataFrame.cs" />
-    <Compile Include="Formats\Mpeg\MetaData\MpegAudioInfoFrame.cs" />
-    <Compile Include="Basics\Direction.cs" />
-    <Compile Include="Maps\Basic\SineMap.cs" />
-    <Compile Include="Basics\TerminalItem.cs" />
-    <Compile Include="Formats\Svg\Svg.cs" />
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Drawing" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Formats\Mpeg\MetaData\" />
-    <Folder Include="Formats\Svg\" />
-  </ItemGroup>
 </Project>
